# Hearth-Spoon-Server

./: .dockerignore  .env.example  .env.local.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE.md  Dockerfile.api  Dockerfile.worker  Makefile  PRODUCTION_CHECKLIST.md  README.md  alembic.ini  docker-compose.dev.yml  docker-compose.yml  nginx.conf  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 20260315_0001_initial_schema.py
api-client/bruno/: .env.sample  bruno.json
api-client/bruno/admin/: admin-readiness.bru  get-generation-job.bru  publish-recipe.bru  run-generation-now.bru  unpublish-recipe.bru
api-client/bruno/environments/: docker.bru  local.bru  production-template.bru
api-client/bruno/health/: health.bru
api-client/bruno/public/: feed.bru  get-recipe-by-id.bru  latest-recipe.bru
app/: __init__.py  bootstrap.py  main.py
app/api/: dependencies.py  errors.py  openapi.py  router.py
app/api/admin/: routes_generations.py  routes_health.py  routes_recipes.py
app/api/public/: routes_health.py  routes_recipes.py
app/application/: exceptions.py  models.py
app/config/: settings.py
app/domain/: constants.py  entities.py  enums.py  exceptions.py  recipe_schema.py  time.py
app/observability/: __init__.py  context.py  logging.py  middleware.py
app/scheduler/: __init__.py  cli.py
app/security/: auth.py  rate_limiter.py  safety.py
tests/: conftest.py
tests/fakes/: __init__.py  fake_components.py
tests/integration/: test_admin_generation_api.py  test_health_api.py  test_openapi_docs.py  test_public_recipe_api.py
tests/unit/: test_generation_service.py  test_locking.py  test_openai_providers.py  test_scheduler_cli.py
(+34 files in other folders)
