[project]
name = "pech-da-lozhka-backend"
version = "0.1.0"
description = "Production-ready backend starter for the ПечьДаЛожка mobile application."
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "alembic>=1.16.0,<2.0.0",
    "boto3>=1.39.0,<2.0.0",
    "fastapi>=0.116.0,<1.0.0",
    "httpx>=0.28.0,<1.0.0",
    "openai>=1.109.0,<2.0.0",
    "psycopg[binary]>=3.2.0,<4.0.0",
    "pydantic>=2.11.0,<3.0.0",
    "pydantic-settings>=2.10.0,<3.0.0",
    "python-multipart>=0.0.20,<1.0.0",
    "redis>=6.4.0,<7.0.0",
    "sqlalchemy>=2.0.43,<3.0.0",
    "structlog>=25.4.0,<26.0.0",
    "tenacity>=9.1.0,<10.0.0",
    "uvicorn[standard]>=0.35.0,<1.0.0",
]

[dependency-groups]
dev = [
    "fakeredis>=2.31.0,<3.0.0",
    "mypy>=1.18.0,<2.0.0",
    "pre-commit>=4.3.0,<5.0.0",
    "pytest>=8.4.0,<9.0.0",
    "pytest-cov>=7.0.0,<8.0.0",
    "pytest-mock>=3.15.0,<4.0.0",
    "ruff>=0.13.0,<1.0.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "B",
    "E",
    "F",
    "I",
    "N",
    "UP",
    "W",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
addopts = "-q --strict-markers --strict-config --disable-warnings"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
plugins = ["pydantic.mypy"]
disallow_untyped_defs = false
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = false
ignore_missing_imports = true
exclude = ["alembic/"]

[tool.coverage.run]
source = ["app"]
branch = true

[tool.coverage.report]
skip_covered = true
show_missing = true
